# BrittleFractureSimulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: RDT.meshb
assets/results/: SnowFlake_out.wrl  bunny_full.wrl  snowFlake_10.wrl
cmake/: FindGeogram.cmake  coacd.cmake  geogram.cmake  libigl.cmake
src/: clipper.cpp  clipper.h  main.cpp  meshprep.cpp  meshprep.h  pattern.cpp  pattern.h  simulation.cpp  simulation.h  tests.h  util.cpp  util.h  utils.h  vec.cpp  vec.h
src/viewer/: particleViewer.cpp  particleViewer.h  viewer.cpp  viewer.h
voro/src/: v_base_wl.cc
